# Robot-Operating-System-Cookbook

./: README.md
Chapter03/chapter3_tutorials/parameter_server_tutorials/: CMakeLists.txt  package.xml
Chapter03/chapter3_tutorials/parameter_server_tutorials/cfg/: parameter_server_tutorials.cfg
Chapter03/chapter3_tutorials/parameter_server_tutorials/src/: parameter_server_tutorials.cpp
Chapter03/chapter3_tutorials/rviz_plugin_tutorials/: CMakeLists.txt  package.xml  plugin_description.xml
Chapter03/chapter3_tutorials/rviz_plugin_tutorials/src/: imu_display.cpp  imu_display.h  imu_visual.cpp  imu_visual.h
Chapter04/chapter4_tutorials/: CMakeLists.txt  package.xml
Chapter04/chapter4_tutorials/cfg/: DynamicParam.cfg
Chapter04/chapter4_tutorials/config/: chapter4_tutorials.config  diagnostic_aggregator.yaml  program9.rviz
Chapter04/chapter4_tutorials/launch/: program1.launch  program10.launch  program1_dump.launch  program1_gdb.launch  program1_valgrind.launch  program2.launch  program3.launch  program4_5.launch  program4_record.launch  program6.launch  program7.launch  program8.launch  program9.launch
Chapter04/chapter4_tutorials/src/: program1.cpp  program10.cpp  program1_dump.cpp  program1_mem.cpp  program2.cpp  program3.cpp  program4.cpp  program5.cpp  program6.cpp  program7.cpp  program8.cpp  program9.cpp
Chapter04/chapter4_tutorials/srv/: SetSpeed.srv
Chapter08/chapter8_tutorials/opencv_candidate/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
Chapter08/chapter8_tutorials/opencv_candidate/include/opencv_candidate/: datamatrix.hpp  feature2d.hpp
Chapter08/chapter8_tutorials/opencv_candidate/include/opencv_candidate_reconst3d/: reconst3d.hpp
Chapter08/chapter8_tutorials/opencv_candidate/include/opencv_creative/: reader.h
Chapter08/chapter8_tutorials/opencv_candidate/src/: CMakeLists.txt
Chapter08/chapter8_tutorials/opencv_candidate/src/creative/: CMakeLists.txt  creative.cpp  main.cpp
Chapter08/chapter8_tutorials/opencv_candidate/src/opencv_candidate/: CMakeLists.txt  datamatrix.cpp  feature2d.cpp
Chapter08/chapter8_tutorials/opencv_candidate/src/reconst3d/: CMakeLists.txt  TODO  arbitrary_capture.cpp  capture.cpp  feature2d_ransac3d.cpp  graph_optimizations.hpp  graph_se3.cpp  graph_se3_rgbd_icp.cpp  graph_se3_rgbd_icp_model.cpp  load_data.cpp  mask_data.cpp  model.cpp  ocv_pcl_convert.hpp  reconst3d_init.cpp  reconstruction.cpp
Chapter08/chapter8_tutorials/opencv_candidate/src/reconst3d/samples/: arbitrary_model_capture.cpp  circular_model_capture.cpp  cylinder_evaluation.cpp
Chapter08/chapter8_tutorials/opencv_candidate/src/rgbd/: CMakeLists.txt
Chapter08/chapter8_tutorials/opencv_candidate/src/rgbd/src/: depth_cleaner.cpp  depth_to_3d.cpp  depth_to_3d.h  normal.cpp  odometry.cpp  plane.cpp  rgbd_init.cpp  utils.cpp  utils.h
Chapter08/chapter8_tutorials/opencv_candidate/src/rgbd/test/: test_normal.cpp  test_odometry.cpp  test_precomp.hpp  test_utils.cpp
Chapter08/chapter8_tutorials/smart_grasping_sandbox/fh_desc/: CMakeLists.txt  mainpage.dox  model.config  model.urdf  package.xml  setup.py
Chapter08/chapter8_tutorials/smart_grasping_sandbox/fh_desc/config/: hand_H_gazebo_trajectory.yaml
Chapter08/chapter8_tutorials/smart_grasping_sandbox/fh_desc/launch/: launch_simulation.launch
Chapter08/chapter8_tutorials/smart_grasping_sandbox/smart_grasping_sandbox/: CMakeLists.txt  package.xml  setup.py
Chapter08/chapter8_tutorials/smart_grasping_sandbox/smart_grasping_sandbox/launch/: smart_grasping_sandbox.launch
Chapter08/chapter8_tutorials/smart_grasping_sandbox/smart_grasping_sandbox/nodes/: README.md  grasp_quality.py  grasp_quality_entrypoint.sh
Chapter08/chapter8_tutorials/smart_grasping_sandbox/smart_grasping_sandbox/notebooks/: Display grasp quality.ipynb  Grasp Bayesian Optimization.ipynb  Grasp Quality.ipynb  RL-Hand.ipynb  Smart Grasping Sandbox.ipynb  model-Q.h5  model.h5  state.pckl
Chapter08/chapter8_tutorials/smart_grasping_sandbox/smart_grasping_sandbox/src/smart_grasping_sandbox/: smart_grasper.py
Chapter08/chapter8_tutorials/smart_grasping_sandbox/smart_grasping_sandbox/world/: smart_grasping.world
Chapter09/chapter9_tutorials/geographic_info/geodesy/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml  setup.py
Chapter09/chapter9_tutorials/geographic_info/geodesy/doc/: conf.py  geodesy.bounding_box.rst  geodesy.gen_uuid.rst  geodesy.props.rst  geodesy.utm.rst  geodesy.wu_point.rst  index.rst
Chapter09/chapter9_tutorials/geographic_info/geodesy/tests/: test_bounding_box.py  test_props.py  test_utm.cpp  test_utm.py  test_wgs84.cpp  test_wu_point.py
Chapter09/chapter9_tutorials/geographic_info/geographic_info/: CHANGELOG.rst  CMakeLists.txt  package.xml
Chapter09/chapter9_tutorials/geographic_info/geographic_msgs/: CMakeLists.txt  package.xml
Chapter09/chapter9_tutorials/geographic_info/geographic_msgs/msg/: GeoPointStamped.msg  GeoPoseStamped.msg  GeographicMap.msg  GeographicMapChanges.msg  MapFeature.msg  RouteNetwork.msg  RoutePath.msg  RouteSegment.msg  WayPoint.msg
Chapter09/chapter9_tutorials/geographic_info/geographic_msgs/srv/: GetGeoPath.srv  GetRoutePlan.srv
Chapter09/chapter9_tutorials/rotors_simulator_demos/: CMakeLists.txt  README.md  package.xml
Chapter09/chapter9_tutorials/rotors_simulator_demos/launch/: mav_hovering_example_msf.launch
Chapter09/chapter9_tutorials/rotors_simulator_demos/resource/: msf_simulator.yaml
Chapter09/chapter9_tutorials/rotors_simulator_demos/src/: hovering_example_msf.cpp
Chapter09/chapter9_tutorials/unique_identifier/unique_id/: CHANGELOG.rst  CMakeLists.txt  conf.py  index.rst  mainpage.dox  package.xml  rosdoc.yaml  setup.py  unique_id.rst
Chapter09/chapter9_tutorials/unique_identifier/unique_id/tests/: CMakeLists.txt  second_test_unique_id.cpp  test_unique_id.cpp  test_unique_id.py
Chapter09/chapter9_tutorials/unique_identifier/unique_identifier/: CHANGELOG.rst  CMakeLists.txt  package.xml
Chapter09/chapter9_tutorials/unique_identifier/uuid_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
(+252 files in other folders)
