<?xml version="1.0"?>
<package format="2">
  <name>parameter_server_tutorials</name>
  <version>0.1.0</version>
  <description>parameter_server_tutorials Dynamic parameters </description>

  <maintainer email="linux.kbp@gmail.com">Kumar Bipin</maintainer>

  <author email="linux.kbp@gmail.com">Kumar Bipin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
</package>
