<package>
  <name>fh_desc</name>
  <version>0.0.0</version>
  <description>fh_desc contains the description for Shadow Robot's flexible hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/shadow-robot/fh_common</url>
  <url type="bugtracker">https://github.com/shadow-robot/fh_common/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rospy</run_depend>
</package>
