<package>

  <name>geographic_info</name>
  <version>0.5.3</version>
  <description>
    Geographic information metapackage.

    Not needed for wet packages, use only to resolve dry stack
    dependencies.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://wiki.ros.org/geographic_info</url>
  <url type="repository">https://github.com/ros-geographic-info/geographic_info</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/geographic_info/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geodesy</run_depend>
  <run_depend>geographic_msgs</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
