<package>

  <name>geographic_msgs</name>
  <version>0.5.3</version>
  <description>
     ROS messages for Geographic Information Systems.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <url>http://wiki.ros.org/geographic_msgs</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/geographic_info/issues</url>
  <url type="repository">https://github.com/ros-geographic-info/geographic_info.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uuid_msgs</run_depend>

</package>
