<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">

  <name>unique_id</name>
  <version>1.0.6</version>
  <description>
    ROS Python and C++ interfaces for universally unique identifiers.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/unique_id</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>uuid_msgs</depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
